Reg_Alloc/parser.output
Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_CMD

    2 NT_CMD: TM_VAR TM_IDENT
    3       | NT_EXPR TM_ASGNOP NT_EXPR
    4       | NT_CMD TM_SEMICOL NT_CMD
    5       | TM_IF NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    6       | TM_WHILE NT_EXPR TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    7       | TM_WI TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
    8       | TM_WC TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    9 NT_EXPR0: TM_NAT
   10         | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   11         | TM_IDENT
   12         | TM_RI TM_LEFT_PAREN TM_RIGHT_PAREN
   13         | TM_RC TM_LEFT_PAREN TM_RIGHT_PAREN

   14 NT_EXPR1: TM_NOT NT_EXPR
   15         | TM_MALLOC TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   16         | NT_EXPR0

   17 NT_EXPR: NT_EXPR1
   18        | TM_MINUS NT_EXPR
   19        | TM_MUL NT_EXPR
   20        | NT_EXPR TM_MUL NT_EXPR
   21        | NT_EXPR TM_PLUS NT_EXPR
   22        | NT_EXPR TM_MINUS NT_EXPR
   23        | NT_EXPR TM_DIV NT_EXPR
   24        | NT_EXPR TM_MOD NT_EXPR
   25        | NT_EXPR TM_LT NT_EXPR
   26        | NT_EXPR TM_GT NT_EXPR
   27        | NT_EXPR TM_LE NT_EXPR
   28        | NT_EXPR TM_GE NT_EXPR
   29        | NT_EXPR TM_EQ NT_EXPR
   30        | NT_EXPR TM_NE NT_EXPR
   31        | NT_EXPR TM_AND NT_EXPR
   32        | NT_EXPR TM_OR NT_EXPR


Terminals, with rules where they appear

$end (0) 0
error (256)
TM_NAT (258) 9
TM_IDENT (259) 2 11
TM_LEFT_BRACE (260) 5 6
TM_RIGHT_BRACE (261) 5 6
TM_LEFT_PAREN (262) 7 8 10 12 13 15
TM_RIGHT_PAREN (263) 7 8 10 12 13 15
TM_SEMICOL (264) 4
TM_MALLOC (265) 15
TM_RI (266) 12
TM_RC (267) 13
TM_WI (268) 7
TM_WC (269) 8
TM_VAR (270) 2
TM_IF (271) 5
TM_THEN (272) 5
TM_ELSE (273) 5
TM_WHILE (274) 6
TM_DO (275) 6
TM_ASGNOP (276) 3
TM_OR (277) 32
TM_AND (278) 31
TM_NOT (279) 14
TM_LT (280) 25
TM_LE (281) 27
TM_GT (282) 26
TM_GE (283) 28
TM_EQ (284) 29
TM_NE (285) 30
TM_PLUS (286) 21
TM_MINUS (287) 18 22
TM_MUL (288) 19 20
TM_DIV (289) 23
TM_MOD (290) 24
TM_UMINUS (291)
TM_DEREF (292)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
NT_WHOLE (39)
    on left: 1, on right: 0
NT_CMD (40)
    on left: 2 3 4 5 6 7 8, on right: 1 4 5 6
NT_EXPR0 (41)
    on left: 9 10 11 12 13, on right: 16
NT_EXPR1 (42)
    on left: 14 15 16, on right: 17
NT_EXPR (43)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32, on right:
    3 5 6 7 8 10 14 15 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32


state 0

    0 $accept: . NT_WHOLE $end

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_WI          shift, and go to state 7
    TM_WC          shift, and go to state 8
    TM_VAR         shift, and go to state 9
    TM_IF          shift, and go to state 10
    TM_WHILE       shift, and go to state 11
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_WHOLE  go to state 15
    NT_CMD    go to state 16
    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 19


state 1

    9 NT_EXPR0: TM_NAT .

    $default  reduce using rule 9 (NT_EXPR0)


state 2

   11 NT_EXPR0: TM_IDENT .

    $default  reduce using rule 11 (NT_EXPR0)


state 3

   10 NT_EXPR0: TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 20


state 4

   15 NT_EXPR1: TM_MALLOC . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 21


state 5

   12 NT_EXPR0: TM_RI . TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 22


state 6

   13 NT_EXPR0: TM_RC . TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 23


state 7

    7 NT_CMD: TM_WI . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 24


state 8

    8 NT_CMD: TM_WC . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 25


state 9

    2 NT_CMD: TM_VAR . TM_IDENT

    TM_IDENT  shift, and go to state 26


state 10

    5 NT_CMD: TM_IF . NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 27


state 11

    6 NT_CMD: TM_WHILE . NT_EXPR TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 28


state 12

   14 NT_EXPR1: TM_NOT . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 29


state 13

   18 NT_EXPR: TM_MINUS . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 30


state 14

   19 NT_EXPR: TM_MUL . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 31


state 15

    0 $accept: NT_WHOLE . $end

    $end  shift, and go to state 32


state 16

    1 NT_WHOLE: NT_CMD .
    4 NT_CMD: NT_CMD . TM_SEMICOL NT_CMD

    TM_SEMICOL  shift, and go to state 33

    $default  reduce using rule 1 (NT_WHOLE)


state 17

   16 NT_EXPR1: NT_EXPR0 .

    $default  reduce using rule 16 (NT_EXPR1)


state 18

   17 NT_EXPR: NT_EXPR1 .

    $default  reduce using rule 17 (NT_EXPR)


state 19

    3 NT_CMD: NT_EXPR . TM_ASGNOP NT_EXPR
   20 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    TM_ASGNOP  shift, and go to state 34
    TM_OR      shift, and go to state 35
    TM_AND     shift, and go to state 36
    TM_LT      shift, and go to state 37
    TM_LE      shift, and go to state 38
    TM_GT      shift, and go to state 39
    TM_GE      shift, and go to state 40
    TM_EQ      shift, and go to state 41
    TM_NE      shift, and go to state 42
    TM_PLUS    shift, and go to state 43
    TM_MINUS   shift, and go to state 44
    TM_MUL     shift, and go to state 45
    TM_DIV     shift, and go to state 46
    TM_MOD     shift, and go to state 47


state 20

   10 NT_EXPR0: TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN
   20 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 48
    TM_OR           shift, and go to state 35
    TM_AND          shift, and go to state 36
    TM_LT           shift, and go to state 37
    TM_LE           shift, and go to state 38
    TM_GT           shift, and go to state 39
    TM_GE           shift, and go to state 40
    TM_EQ           shift, and go to state 41
    TM_NE           shift, and go to state 42
    TM_PLUS         shift, and go to state 43
    TM_MINUS        shift, and go to state 44
    TM_MUL          shift, and go to state 45
    TM_DIV          shift, and go to state 46
    TM_MOD          shift, and go to state 47


state 21

   15 NT_EXPR1: TM_MALLOC TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 49


state 22

   12 NT_EXPR0: TM_RI TM_LEFT_PAREN . TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 50


state 23

   13 NT_EXPR0: TM_RC TM_LEFT_PAREN . TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 51


state 24

    7 NT_CMD: TM_WI TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 52


state 25

    8 NT_CMD: TM_WC TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 53


state 26

    2 NT_CMD: TM_VAR TM_IDENT .

    $default  reduce using rule 2 (NT_CMD)


state 27

    5 NT_CMD: TM_IF NT_EXPR . TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   20 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    TM_THEN   shift, and go to state 54
    TM_OR     shift, and go to state 35
    TM_AND    shift, and go to state 36
    TM_LT     shift, and go to state 37
    TM_LE     shift, and go to state 38
    TM_GT     shift, and go to state 39
    TM_GE     shift, and go to state 40
    TM_EQ     shift, and go to state 41
    TM_NE     shift, and go to state 42
    TM_PLUS   shift, and go to state 43
    TM_MINUS  shift, and go to state 44
    TM_MUL    shift, and go to state 45
    TM_DIV    shift, and go to state 46
    TM_MOD    shift, and go to state 47


state 28

    6 NT_CMD: TM_WHILE NT_EXPR . TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   20 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    TM_DO     shift, and go to state 55
    TM_OR     shift, and go to state 35
    TM_AND    shift, and go to state 36
    TM_LT     shift, and go to state 37
    TM_LE     shift, and go to state 38
    TM_GT     shift, and go to state 39
    TM_GE     shift, and go to state 40
    TM_EQ     shift, and go to state 41
    TM_NE     shift, and go to state 42
    TM_PLUS   shift, and go to state 43
    TM_MINUS  shift, and go to state 44
    TM_MUL    shift, and go to state 45
    TM_DIV    shift, and go to state 46
    TM_MOD    shift, and go to state 47


state 29

   14 NT_EXPR1: TM_NOT NT_EXPR .
   20 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    $default  reduce using rule 14 (NT_EXPR1)


state 30

   18 NT_EXPR: TM_MINUS NT_EXPR .
   20        | NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    $default  reduce using rule 18 (NT_EXPR)


state 31

   19 NT_EXPR: TM_MUL NT_EXPR .
   20        | NT_EXPR . TM_MUL NT_EXPR
   21        | NT_EXPR . TM_PLUS NT_EXPR
   22        | NT_EXPR . TM_MINUS NT_EXPR
   23        | NT_EXPR . TM_DIV NT_EXPR
   24        | NT_EXPR . TM_MOD NT_EXPR
   25        | NT_EXPR . TM_LT NT_EXPR
   26        | NT_EXPR . TM_GT NT_EXPR
   27        | NT_EXPR . TM_LE NT_EXPR
   28        | NT_EXPR . TM_GE NT_EXPR
   29        | NT_EXPR . TM_EQ NT_EXPR
   30        | NT_EXPR . TM_NE NT_EXPR
   31        | NT_EXPR . TM_AND NT_EXPR
   32        | NT_EXPR . TM_OR NT_EXPR

    $default  reduce using rule 19 (NT_EXPR)


state 32

    0 $accept: NT_WHOLE $end .

    $default  accept


state 33

    4 NT_CMD: NT_CMD TM_SEMICOL . NT_CMD

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_WI          shift, and go to state 7
    TM_WC          shift, and go to state 8
    TM_VAR         shift, and go to state 9
    TM_IF          shift, and go to state 10
    TM_WHILE       shift, and go to state 11
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_CMD    go to state 56
    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 19


state 34

    3 NT_CMD: NT_EXPR TM_ASGNOP . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 57


state 35

   32 NT_EXPR: NT_EXPR TM_OR . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 58


state 36

   31 NT_EXPR: NT_EXPR TM_AND . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 59


state 37

   25 NT_EXPR: NT_EXPR TM_LT . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 60


state 38

   27 NT_EXPR: NT_EXPR TM_LE . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 61


state 39

   26 NT_EXPR: NT_EXPR TM_GT . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 62


state 40

   28 NT_EXPR: NT_EXPR TM_GE . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 63


state 41

   29 NT_EXPR: NT_EXPR TM_EQ . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 64


state 42

   30 NT_EXPR: NT_EXPR TM_NE . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR0  go to state 17
    NT_EXPR1  go to state 18
    NT_EXPR   go to state 65


state 43

   21 NT_EXPR: NT_EXPR TM_PLUS . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
